--- a/css/Stilo.css
+++ b/css/Stilo.css
@@ -49,14 +49,15 @@ section {
 	margin-bottom: 25px;
 
 
-
 }
 
 #bienvenidos{
-	margin-top: 150px;
-	margin-left: 20%;
+	margin-top: 100px;
+	margin-bottom: 100px;
+	margin-left: 10%;
 	width: 80%;
 	text-align: center;
+	font-size: 20px;
 }
 
 
