--- a/css/login.css
+++ b/css/login.css
@@ -14,11 +14,10 @@
 
 }
 .login{
-width: 25%;
-height:30px;
-border-radius:5px;
-display: block;
-margin-top: 15px;
-margin-bottom: 10px 
-
+    width: 200px;
+    height:30px;
+    border-radius:5px;
+    display: block;
+    margin-top: 15px;
+    margin-bottom: 10px 
 }
